Fix file whitelist system